--- a/config.gradle
+++ b/config.gradle
@@ -13,10 +13,10 @@ ext {
     multiDexEnabled = true
 
     /*dependencies*/
-    appcompat = '1.3.1'
+    appcompat = '1.4.0'
     material = '1.4.0'
     vectordrawable = "1.1.0"
-    constraintlayout = '2.1.1'
+    constraintlayout = '2.1.2'
     annotation = '1.3.0'
     multiDexVersion = "2.0.1"
     core_ktx = '1.7.0'
@@ -31,7 +31,7 @@ ext {
     glide = "4.12.0"
     retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
-    ok_http = "5.0.0-alpha.2"
+    ok_http = '5.0.0-alpha.3'
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
