--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,9 @@ android {
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
         resConfigs "zh"
-//        ndk {
-//            abiFilters "armeabi-v7a"
-//        }
+        ndk {
+            abiFilters "arm64-v8a", "armeabi-v7a"
+        }
     }
 
     signingConfigs {
@@ -56,13 +56,13 @@ android {
 
         wandoujia {
             manifestPlaceholders = [
-                    "APP_NAME"     : "KotlinCommon-wandoujia",
+                    "APP_NAME"          : "KotlinCommon-wandoujia",
                     "META_CHANNEL_VALUE": "wandoujia"
             ]
         }
         yingyongbao {
             manifestPlaceholders = [
-                    "APP_NAME"     : "KotlinCommon-yingyongbao",
+                    "APP_NAME"          : "KotlinCommon-yingyongbao",
                     "META_CHANNEL_VALUE": "yingyongbao"
             ]
         }
