--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'kotlin-kapt'
 }
 
+
+apply from: file("plugins/bytex.gradle")
+
 android {
 
     compileSdk compile_sdk_version
@@ -53,6 +56,13 @@ android {
 
     flavorDimensions "channel"
     productFlavors {
+
+        dev{
+            manifestPlaceholders = [
+                    "APP_NAME"          : "KotlinCommon-dev",
+                    "META_CHANNEL_VALUE": "dev"
+            ]
+        }
 
         wandoujia {
             manifestPlaceholders = [
