--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 println("我是根目录下的build.gradle")
 
 buildscript {
-    apply from: file("config.gradle")
+    apply from: file("${getRootDir()}/gradle_script/config.gradle")
 
     repositories {
         google()
@@ -14,17 +14,19 @@ buildscript {
 
     }
     dependencies {
-        /*二进制插件*/
         classpath 'com.android.tools.build:gradle:7.0.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
         /*加这个能减少ARouter初始化时间*/
         classpath "com.alibaba:arouter-register:1.0.2"
-
-        /*byteX*/
+        /*byteX 基础*/
         classpath "com.bytedance.android.byteX:base-plugin:${bytex_plugin_version}"
+        /*方法内联*/
         classpath "com.bytedance.android.byteX:access-inline-plugin:${bytex_plugin_version}"
+        /*常量内联*/
         classpath "com.bytedance.android.byteX:const-inline-plugin:${bytex_plugin_version}"
+        /*资源优化*/
         classpath "com.bytedance.android.byteX:shrink-r-plugin:${bytex_plugin_version}"
+        /*方法移除*/
         classpath "com.bytedance.android.byteX:method-call-opt-plugin:${bytex_plugin_version}"
     }
 
@@ -49,3 +51,4 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
