update code review
#branch=kotlin_common_mvvm

--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@
 println("我是根目录下的build.gradle")
 
 buildscript {
-    apply from: file("${getRootDir()}/gradle_script/config.gradle")
+    apply from: file("gradle_script/config.gradle")
 
     repositories {
         google()
@@ -14,7 +14,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:7.0.3'
+        classpath 'com.android.tools.build:gradle:4.2.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.0"
         /*加这个能减少ARouter初始化时间*/
         classpath "com.alibaba:arouter-register:1.0.2"
