--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -21,13 +21,13 @@ ext {
     multiDexVersion = "2.0.1"
     core_ktx = '1.7.0'
     lifecycle_ktx = '2.4.0'
-    collection_ktx = "1.1.0"
+    collection_ktx = '1.2.0'
     kotlinx_coroutines = '1.5.2-native-mt'
     swiperefreshlayout = '1.1.0'
-    room_version = '2.3.0'
+    room_version = '2.4.0'
 
     /*third party*/
-    eventbus = "3.2.0"
+    eventbus = '3.3.1'
     glide = "4.12.0"
     retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
@@ -40,7 +40,7 @@ ext {
     baseRecyclerViewAdapterHelper = "3.0.6"
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
-    utilcode = "1.30.6"
+    utilcode = '1.31.0'
     arouter_api = '1.5.2'
     arouter_compiler = '1.5.2'
     walleVersion = "1.1.7"
