--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -80,7 +80,8 @@ dependencies {
 
     /*utils*/
     api "com.blankj:utilcodex:$utilcode"
-
+    /*代替sp*/
+    api 'com.tencent:mmkv:1.2.11'
 
     /*Gson*/
     api "com.google.code.gson:gson:$gson"
@@ -105,6 +106,8 @@ dependencies {
     api project(path: ':lib_permission')
     api project(path: ':lib_resource')
     api project(path: ':lib_widget')
+
+
 
 
 }
