--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id 'com.android.application'
     id 'kotlin-android'
     id 'kotlin-kapt'
+    id 'com.aliyun.ams.emas-services'
 }
 
 println "getRootDir():${getRootDir()}"
@@ -130,11 +131,13 @@ dependencies {
 
     implementation project(':common')
     implementation "io.github.yuzhiqiang1993:xeon_bsdiff:1.0.1"
+
     if (isModule.toBoolean()) {
         implementation project(':gao_de_map')
     }
 
     implementation 'com.github.aiceking:AppStartFaster:2.0.0'
+
 
 
 }
