feat  新增崩溃上报和示例
#branch=kotlin_common_mvvm

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,9 @@ kapt {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'androidx.appcompat:appcompat:1.4.0'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
 
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
     implementation "com.github.yuzhiqiang1993:zxing:${zxing_version}"
@@ -138,6 +141,8 @@ dependencies {
 
     implementation 'com.github.aiceking:AppStartFaster:2.0.0'
 
+    /*阿里崩溃分析 必须要手动依赖下 不然启动必定崩溃*/
+    implementation 'com.aliyun.ams:alicloud-android-ha-crashreporter:1.2.5'
 
 
 }
