--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:7.0.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         // 添加emas-services插件
-        classpath 'com.aliyun.ams:emas-services:1.0.2'
+//        classpath 'com.aliyun.ams:emas-services:1.0.2'
 
         /*加这个能减少ARouter初始化时间*/
         classpath "com.alibaba:arouter-register:1.0.2"
