--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -98,6 +98,9 @@ dependencies {
 
     /*progressmanager*/
     api "com.github.JessYanCoding:ProgressManager:$progressmanager_version"
+
+    api 'com.github.aiceking:AppStartFaster:2.0.0'
+
     api project(path: ':lib_base_adapter')
     api project(path: ':lib_eventbus')
     api project(path: ':lib_img')
@@ -105,6 +108,7 @@ dependencies {
     api project(path: ':lib_permission')
     api project(path: ':lib_resource')
     api project(path: ':lib_widget')
+    api project(path: ':lib_aliemas')
 
 
 }
