--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -13,32 +13,32 @@ ext {
     multiDexEnabled = true
 
     /*dependencies*/
-    appcompat = '1.4.0'
-    material = '1.4.0'
+    appcompat = '1.4.1'
+    material = '1.5.0'
     vectordrawable = "1.1.0"
-    constraintlayout = '2.1.2'
+    constraintlayout = '2.1.3'
     annotation = '1.3.0'
     multiDexVersion = "2.0.1"
     core_ktx = '1.7.0'
-    lifecycle_ktx = '2.4.0'
+    lifecycle_ktx = '2.4.1'
     collection_ktx = '1.2.0'
     kotlinx_coroutines = '1.6.0-native-mt'
     swiperefreshlayout = '1.1.0'
-    room_version = '2.4.0'
+    room_version = '2.4.1'
 
     /*third party*/
     eventbus = '3.3.1'
-    glide = "4.12.0"
+    glide = '4.13.0'
     retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
-    ok_http = '5.0.0-alpha.3'
+    ok_http = '5.0.0-alpha.4'
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
     gson = '2.8.9'
     material_dialogs = "3.3.0"
     baseRecyclerViewAdapterHelper = "3.0.7"
-    mmkv = "1.2.11"
+    mmkv = '1.2.12'
     photoview = "2.3.0"
     objectboxVersion = "2.3.4"
     utilcode = '1.31.0'
