--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     api "com.tencent:mmkv:${mmkv}"
     /*Gson*/
     api "com.google.code.gson:gson:$gson"
+
+//    api("com.squareup.moshi:moshi:1.13.0")
+
     /*ARouter*/
     api "com.alibaba:arouter-api:$arouter_api"
     kapt "com.alibaba:arouter-compiler:$arouter_compiler"
