--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -85,7 +85,7 @@ dependencies {
     /*Gson*/
     api "com.google.code.gson:gson:$gson"
 
-//    api("com.squareup.moshi:moshi:1.13.0")
+    api("com.squareup.moshi:moshi-kotlin:1.13.0")
 
     /*ARouter*/
     api "com.alibaba:arouter-api:$arouter_api"
@@ -96,7 +96,8 @@ dependencies {
     api "com.squareup.okhttp3:okhttp:$ok_http"
     api "com.squareup.retrofit2:retrofit:$retrofit"
     api "com.squareup.okhttp3:logging-interceptor:$ok_http"
-    api "com.squareup.retrofit2:converter-gson:$retrofit"
+//    api "com.squareup.retrofit2:converter-gson:$retrofit"
+    api "com.squareup.retrofit2:converter-moshi:$retrofit"
     api "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
 
     /*progressmanager*/
