--- a/gradle.properties
+++ b/gradle.properties
@@ -4,4 +4,4 @@ android.useAndroidX=true
 authToken=jp_45koepdran5gsmk15cdvtf3lhc
 isModule=true
 kotlin.code.style=official
-
+android.injected.testOnly=false
