--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -57,6 +57,7 @@ ext {
     bannerViewPager = "3.5.2"
     viewpager2 = '1.1.0-beta01'
     bytex_plugin_version = "0.3.0"
+    moshi = "1.13.0"
     signConfigs = [
             storeFilePath: "kotlinCommon",
             storePwd     : "123456",
