--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         tools:ignore="GoogleAppIndexingWarning,UnusedAttribute,LockedOrientationActivity"
         tools:replace="android:allowBackup,andrpod:label">
         <activity
+            android:name=".ui.activity.MoshiActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.activity.ChannelActivity"
             android:exported="false" />
         <activity
