--- a/lib_base/src/main/AndroidManifest.xml
+++ b/lib_base/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.yzq.lib_base">
 
 
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application>
 
         <provider
