--- a/lib_aliemas/build.gradle
+++ b/lib_aliemas/build.gradle
@@ -15,9 +15,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -32,6 +29,10 @@ android {
         }
 
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'com.yzq.lib_aliemas'
 
 
 }
