--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -19,9 +19,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -42,6 +39,10 @@ android {
         dataBinding true
         viewBinding true
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'com.yzq.lib_base'
 
 
 }
