--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ android {
         versionName version_name
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
-        resConfigs "zh"
+        resConfigs 'zh'
         ndk {
             abiFilters "arm64-v8a", "armeabi-v7a"
         }
@@ -105,6 +105,7 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    namespace 'com.yzq.kotlincommon'
 
 
 }
