--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,9 +28,6 @@ android {
         }
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -51,6 +48,10 @@ android {
         dataBinding true
         viewBinding true
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'com.yzq.common'
 
 
 }
@@ -69,13 +70,11 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     api "androidx.room:room-ktx:$room_version"
 
-
     /*Bugly*/
     api "com.tencent.bugly:crashreport_upgrade:$bugly_crashreport_upgrade"
     api "com.tencent.bugly:nativecrashreport:$bugly_nativecrashreport"
     /*flexbox*/
     api "com.github.google:flexbox-layout:${flexbox_layout}"
-
 
     /*内存泄漏检测 leakcanary*/
     debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanary_android}"
