--- a/gao_de_map/build.gradle
+++ b/gao_de_map/build.gradle
@@ -20,10 +20,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    lintOptions {
-        abortOnError false
-    }
-
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -58,6 +54,10 @@ android {
         dataBinding true
         viewBinding true
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'com.yzq.gao_de_map'
 
 
 }
