--- a/lib_materialdialog/build.gradle
+++ b/lib_materialdialog/build.gradle
@@ -18,9 +18,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -35,6 +32,10 @@ android {
         }
 
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'com.yzq.lib_materialdialog'
 
 
 }
