--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -18,9 +18,6 @@ android {
         vectorDrawables.useSupportLibrary = true
     }
 
-    lintOptions {
-        abortOnError false
-    }
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -40,6 +37,10 @@ android {
         dataBinding true
         viewBinding true
     }
+    lint {
+        abortOnError false
+    }
+    namespace 'com.yzq.lib_widget'
 
 
 }
