--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -13,25 +13,25 @@ ext {
     multiDexEnabled = true
 
     /*dependencies*/
-    appcompat = '1.4.1'
-    material = '1.5.0'
+    appcompat = '1.4.2'
+    material = '1.6.1'
     vectordrawable = "1.1.0"
-    constraintlayout = '2.1.3'
+    constraintlayout = '2.1.4'
     annotation = '1.3.0'
     multiDexVersion = "2.0.1"
-    core_ktx = '1.7.0'
+    core_ktx = '1.8.0'
     lifecycle_ktx = '2.4.1'
     collection_ktx = '1.2.0'
-    kotlinx_coroutines = '1.6.1-native-mt'
+    kotlinx_coroutines = '1.6.2'
     swiperefreshlayout = '1.1.0'
     room_version = '2.4.2'
 
     /*third party*/
     eventbus = '3.3.1'
-    glide = '4.13.1'
+    glide = '4.13.2'
     retrofit = "2.9.0"
     progressmanager_version = "1.5.0"
-    ok_http = '5.0.0-alpha.7'
+    ok_http = '5.0.0-alpha.8'
     rx_android = "2.1.1"
     rx_kotlin = "2.4.0"
     autodispose_version = "1.2.0"
@@ -52,7 +52,7 @@ ext {
     flexbox_layout = "3.0.0"
     gradle_versions_plugin = "v0.39.0"
     zxing_version = "2.2.9"
-    jsoup_version = '1.14.3'
+    jsoup_version = '1.15.1'
     leakcanary_android = '2.9.1'
     bannerViewPager = "3.5.2"
     viewpager2 = '1.1.0-beta01'
