--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -84,7 +84,7 @@ dependencies {
     /*代替sp*/
     api "com.tencent:mmkv:${mmkv}"
 
-    api("com.squareup.moshi:moshi-kotlin:1.13.0")
+    api('com.squareup.moshi:moshi-kotlin:1.14.0')
 
     /*ARouter*/
     api "com.alibaba:arouter-api:$arouter_api"
