--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,11 @@
-#Fri Jan 07 17:19:55 CST 2022
-distributionBase=GRADLE_USER_HOME
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
+# distributionBase?distributionPath????????gradle????????
+# GRADLE_USER_HOME??????
+# windows???c:\window\<user-name>\.gradle\
+# linux?$HOME/.gradle
+distributionBase=GRADLE_USER_HOME  
 distributionPath=wrapper/dists
+# ??????gradle????
+distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
+#zipStoreBase?zipStorePath?????????gradle.zip?????
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
