--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,11 +1,11 @@
-# distributionBase?distributionPath????????gradle????????
-# GRADLE_USER_HOME??????
-# windows???c:\window\<user-name>\.gradle\
-# linux?$HOME/.gradle
+# distributionBase?distributionPath??gradle ?????
+# GRADLE_USER_HOME ?????????????
+# windows c:\window\<user-name>\.gradle\
+# linux $HOME/.gradle
 distributionBase=GRADLE_USER_HOME  
 distributionPath=wrapper/dists
-# ??????gradle????
+# ??gradle???
 distributionUrl=https\://services.gradle.org/distributions/gradle-7.3.3-bin.zip
-#zipStoreBase?zipStorePath?????????gradle.zip?????
+#zipStoreBase?zipStorePath ??gradle????????
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
