--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -6,7 +6,7 @@ ext {
 
     /*defaultConfig*/
     compile_sdk_version = 33
-    min_sdk_version = 22
+    min_sdk_version = 23 //Android 6.0
     target_sdk_version = 32
     version_code = 10  //eg:1->0.0.1  10->0.1.0  100->1.0.0
     version_name = "0.1.0"
