--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -8,8 +8,24 @@ ext {
     compile_sdk_version = 33  //按照指定sdk版本进行编译  不影响实际运行  一般就写最新的就行
     min_sdk_version = 23 //Android 6.0  限制最低的设备版本
     target_sdk_version = 30  //目标版本 启用该版本特性 主要做兼容处理 低于该版本的设备按照实际版本运行  高于该版本的设备按照该版本特性运行  例如
-    version_code = 10  //eg:1->0.0.1  10->0.1.0  100->1.0.0
-    version_name = "0.1.0"
+//       软件版本号的形式是major.minor.maintenance
+//    major是主版本号，⼀般在软件有重⼤升级时增长
+//    minor是次版本号，⼀般在软件有新功能时增长
+//    maintenance是维护版本，⼀般在软件有主要的问题修复后增长
+//    正式版本：
+//    major.minor.maintenance----1.0.0
+//    1.0.0对应   10000
+//    1.0.1对应   10001
+//    1.0.10对应  10010
+//    1.1.99对应  10199
+//    1.10.0对应  11000
+//    1.12.9对应  11209
+//    1.12.10对应 11210
+//    10.0.0对应  100000
+//    10.1.1对应  100101
+//    10.10.10对应101010
+    version_code = 10000  //起始值10000
+    version_name = "1.0.0" //显示给用户的版本
     multiDexEnabled = true
 
     /*dependencies*/
