--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -1,14 +1,12 @@
 /*脚本插件*/
-
-println "config.gradle"
+println("======config.gradle======")
 
 ext {
-
     /*defaultConfig*/
     compile_sdk_version = 33  //按照指定sdk版本进行编译  不影响实际运行  一般就写最新的就行
     min_sdk_version = 23 //Android 6.0  限制最低的设备版本
     target_sdk_version = 30  //目标版本 启用该版本特性 主要做兼容处理 低于该版本的设备按照实际版本运行  高于该版本的设备按照该版本特性运行  例如
-//       软件版本号的形式是major.minor.maintenance
+//    软件版本号的形式是major.minor.maintenance
 //    major是主版本号，⼀般在软件有重⼤升级时增长
 //    minor是次版本号，⼀般在软件有新功能时增长
 //    maintenance是维护版本，⼀般在软件有主要的问题修复后增长
