--- a/lib_base/build.gradle
+++ b/lib_base/build.gradle
@@ -100,10 +100,10 @@ dependencies {
     /*progressmanager*/
     api "com.github.JessYanCoding:ProgressManager:$progressmanager_version"
 
-    api 'com.github.aiceking:AppStartFaster:2.0.0'
+    api 'com.github.aiceking:AppStartFaster:2.1.0'
 
     api project(path: ':lib_application')
-    api project(path: ':lib_network')
+    api project(path: ':lib_network_status')
     api project(path: ':lib_base_adapter')
     api project(path: ':lib_eventbus')
     api project(path: ':lib_img')
