--- a/gradle_script/config.gradle
+++ b/gradle_script/config.gradle
@@ -78,6 +78,7 @@ ext {
     viewpager2 = '1.1.0-beta01'
     bytex_plugin_version = "0.3.0"
     moshi = "1.13.0"
+    splashscreen = "1.0.0"
     signConfigs = [
             storeFilePath: "kotlinCommon",
             storePwd     : "123456",
