--- a/lib_resource/build.gradle
+++ b/lib_resource/build.gradle
@@ -6,15 +6,12 @@ plugins {
 }
 
 
-
-
 android {
     compileSdk compile_sdk_version
 
     defaultConfig {
         minSdk min_sdk_version
         targetSdk target_sdk_version
-        multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -49,5 +46,5 @@ dependencies {
     implementation "androidx.vectordrawable:vectordrawable:$vectordrawable"
     implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
     implementation "androidx.annotation:annotation:$annotation"
-    implementation "androidx.multidex:multidex:$multiDexVersion"
+    api "androidx.core:core-splashscreen:$splashscreen"
 }
