--- a/lib_network_status/build.gradle
+++ b/lib_network_status/build.gradle
@@ -10,7 +10,7 @@ android {
     compileSdk compile_sdk_version
 
     defaultConfig {
-        minSdk min_sdk_version
+        minSdk 19
         targetSdk target_sdk_version
         multiDexEnabled true
         vectorDrawables.useSupportLibrary = true
