--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,3 +1,5 @@
+import com.yzq.plugin.AndroidDefaultConfig
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
@@ -12,12 +14,11 @@ kapt {
 }
 
 android {
-    compileSdk compile_sdk_version
-
+    compileSdk AndroidDefaultConfig.compileSdkVersion
     defaultConfig {
-        minSdk min_sdk_version
-        targetSdk target_sdk_version
-        multiDexEnabled true
+        minSdk AndroidDefaultConfig.minSdkVersion
+        targetSdk AndroidDefaultConfig.targetSdkVersion
+        multiDexEnabled AndroidDefaultConfig.multiDexEnabled
         vectorDrawables.useSupportLibrary = true
 
         javaCompileOptions {
