--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,10 +1,11 @@
-import com.yzq.plugin.AndroidDefaultConfig
+import com.yzq.dependency_manager_plugin.*
 
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.yzq.dependency-manager'
 }
 
 kapt {
@@ -14,17 +15,17 @@ kapt {
 }
 
 android {
-    compileSdk AndroidDefaultConfig.compileSdkVersion
+    compileSdk AndroidConfig.compileSdkVersion
+
     defaultConfig {
-        minSdk AndroidDefaultConfig.minSdkVersion
-        targetSdk AndroidDefaultConfig.targetSdkVersion
-        multiDexEnabled AndroidDefaultConfig.multiDexEnabled
+        minSdk AndroidConfig.minSdkVersion
+        targetSdk AndroidConfig.targetSdkVersion
+        multiDexEnabled AndroidConfig.multiDexEnabled
         vectorDrawables.useSupportLibrary = true
 
         javaCompileOptions {
             annotationProcessorOptions {
-                arguments += ["room.schemaLocation":
-                                      "$projectDir/schemas".toString()]
+                arguments += ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
     }
@@ -62,25 +63,28 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
     /*处理图片方向*/
-    implementation 'androidx.exifinterface:exifinterface:1.3.4'
+    implementation AndroidOfficial.exifinterface
 
-    kapt "com.alibaba:arouter-compiler:$arouter_compiler"
+    kapt ARouter.arouterCompiler
 
+    api AndroidOfficial.roomRuntime
+    api AndroidOfficial.roomKtx
+    kapt AndroidOfficial.roomCompiler
 
-    api "androidx.room:room-runtime:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-    api "androidx.room:room-ktx:$room_version"
 
     /*Bugly*/
-    api "com.tencent.bugly:crashreport_upgrade:$bugly_crashreport_upgrade"
-    api "com.tencent.bugly:nativecrashreport:$bugly_nativecrashreport"
+    api ThirdParty.buglyCrashreportUpgrade
+    api ThirdParty.buglyNativeCrashreport
+
     /*flexbox*/
-    api "com.github.google:flexbox-layout:${flexbox_layout}"
+    api ThirdParty.flexboxLayout
+
     /*okhttp请求插件查看*/
-    implementation 'com.localebro:okhttpprofiler:1.0.8'
+    implementation Retrofit.okhttpprofiler
+
 
     /*内存泄漏检测 leakcanary*/
-    debugImplementation "com.squareup.leakcanary:leakcanary-android:${leakcanary_android}"
+    debugImplementation ThirdParty.leakcanaryAndroid
 
     api project(path: ':lib_base')
 
