--- a/lib_base_adapter/build.gradle
+++ b/lib_base_adapter/build.gradle
@@ -1,21 +1,23 @@
+import com.yzq.dependency_manager_plugin.AndroidConfig
+import com.yzq.dependency_manager_plugin.AndroidOfficial
+import com.yzq.dependency_manager_plugin.ThirdParty
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.yzq.dependency-manager'
 }
 
 
-
-
-
 android {
-    compileSdk compile_sdk_version
+    compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
-        minSdk min_sdk_version
-        targetSdk target_sdk_version
-        multiDexEnabled true
+        minSdk AndroidConfig.minSdkVersion
+        targetSdk AndroidConfig.targetSdkVersion
+        multiDexEnabled AndroidConfig.multiDexEnabled
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -46,15 +48,14 @@ dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
 
-    implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.android.material:material:$material"
+    implementation AndroidOfficial.appcompat
+    implementation AndroidOfficial.material
 
     /*baseRecyclerViewAdapterHelper*/
-    api "com.github.CymChad:BaseRecyclerViewAdapterHelper:$baseRecyclerViewAdapterHelper"
-
+    api ThirdParty.baseRecyclerViewAdapterHelper
 
     /*utils*/
-    implementation "com.blankj:utilcodex:$utilcode"
+    implementation ThirdParty.utilcode
     implementation project(path: ':lib_resource')
 
 
