--- a/lib_img/build.gradle
+++ b/lib_img/build.gradle
@@ -1,20 +1,23 @@
+import com.yzq.dependency_manager_plugin.AndroidConfig
+import com.yzq.dependency_manager_plugin.AndroidOfficial
+import com.yzq.dependency_manager_plugin.ThirdParty
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.yzq.dependency-manager'
 }
 
 
-
-
 android {
-    compileSdk compile_sdk_version
+    compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
-        minSdk min_sdk_version
-        targetSdk target_sdk_version
-        multiDexEnabled true
+        minSdk AndroidConfig.minSdkVersion
+        targetSdk AndroidConfig.targetSdkVersion
+        multiDexEnabled AndroidConfig.multiDexEnabled
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -44,19 +47,17 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation "androidx.appcompat:appcompat:$appcompat"
+    implementation AndroidOfficial.appcompat
 
     /*glide*/
-    api "com.github.bumptech.glide:glide:$glide"
-    kapt "com.github.bumptech.glide:compiler:$glide"
+    api ThirdParty.glide
+    kapt ThirdParty.glideCompiler
 
-    /*photoView*/
-    api "com.github.chrisbanes:PhotoView:$photoview"
+    api ThirdParty.photoview
+    api ThirdParty.easyPhotos
 
-    api "com.github.HuanTanSheng:EasyPhotos:$easyPhotos"
     /*utils*/
-    implementation "com.blankj:utilcodex:$utilcode"
-
+    implementation ThirdParty.utilcode
 
     implementation project(path: ':lib_resource')
 
