--- a/lib_network_status/build.gradle
+++ b/lib_network_status/build.gradle
@@ -1,18 +1,23 @@
+import com.yzq.dependency_manager_plugin.AndroidConfig
+import com.yzq.dependency_manager_plugin.AndroidOfficial
+import com.yzq.dependency_manager_plugin.ThirdParty
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.yzq.dependency-manager'
 }
 
 
 android {
-    compileSdk compile_sdk_version
+    compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
-        minSdk 19
-        targetSdk target_sdk_version
-        multiDexEnabled true
+        minSdk AndroidConfig.minSdkVersion
+        targetSdk AndroidConfig.targetSdkVersion
+        multiDexEnabled AndroidConfig.multiDexEnabled
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -40,10 +45,12 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     /*utils*/
-    implementation "com.blankj:utilcodex:$utilcode"
-    implementation "androidx.annotation:annotation:${annotation}"
+    implementation ThirdParty.utilcode
+    implementation AndroidOfficial.annotationLib
+
     //Lifecycles only (without ViewModel or LiveData)
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_ktx"
+    implementation AndroidOfficial.lifecycle
+
     implementation project(path: ':lib_application')
     implementation project(path: ':lib_resource')
 
