--- a/lib_widget/build.gradle
+++ b/lib_widget/build.gradle
@@ -1,19 +1,22 @@
+import com.yzq.dependency_manager_plugin.AndroidConfig
+import com.yzq.dependency_manager_plugin.AndroidOfficial
+import com.yzq.dependency_manager_plugin.ThirdParty
+
 plugins {
     id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'kotlin-parcelize'
+    id 'com.yzq.dependency-manager'
 }
 
 
-
-
 android {
-    compileSdk compile_sdk_version
+    compileSdk AndroidConfig.compileSdkVersion
 
     defaultConfig {
-        minSdk min_sdk_version
-        targetSdk target_sdk_version
+        minSdk AndroidConfig.minSdkVersion
+        targetSdk AndroidConfig.targetSdkVersion
         vectorDrawables.useSupportLibrary = true
     }
 
@@ -48,13 +51,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation "androidx.appcompat:appcompat:$appcompat"
-    implementation "com.google.android.material:material:$material"
-    implementation "androidx.vectordrawable:vectordrawable:$vectordrawable"
-    implementation "androidx.constraintlayout:constraintlayout:$constraintlayout"
-    implementation "androidx.annotation:annotation:$annotation"
+
+    implementation(AndroidOfficial.appcompat)
+    implementation(AndroidOfficial.material)
+    implementation(AndroidOfficial.vectordrawable)
+    implementation(AndroidOfficial.constraintlayout)
+    implementation(AndroidOfficial.annotationLib)
+
+
     /*utils*/
-    implementation "com.blankj:utilcodex:$utilcode"
+    implementation ThirdParty.utilcode
 
 
     implementation project(path: ":lib_resource")
